# UFront2TOSA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/Conversion/: Passes.hpp  Passes.td
include/Conversion/TestParameterToConst/: TestParameterToConst.hpp
include/Dialect/Ufront/IR/: Ufront.hpp  Ufront.td
lib/Conversion/: CMakeLists.txt  FixTosaMatmul.cpp
lib/Conversion/TestElidedToConst/: CMakeLists.txt  TestElidedToConst.cpp
lib/Conversion/TestParameterToConst/: CMakeLists.txt  TestParameterToConst.cpp
lib/Conversion/UfrontToTosa/: CMakeLists.txt  Patterns.cpp  Patterns.hpp  Util.cpp  Util.hpp
lib/Conversion/UfrontToTosa/Patterns/: ActivationPatterns.cpp  BinaryPatterns.cpp  BinaryScalarPatterns.cpp  MultiheadAttentionPattern.cpp  NormPatterns.cpp  Parameter.cpp
lib/Dialect/Ufront/IR/: Ufront.cpp
test/: batch-matmul.mlir  concat.mlir  dropout.mlir  efficient-net.mlir  expand.mlir  fix-tosa-matmul.mlir  gelu.mlir  hardsigmoid.mlir  hardswish.mlir  masked-fill.mlir  mobilenet-v3.mlir  multihead-attention-opt.mlir  multihead-attention.mlir  onnx_EfficientNet.ir  resnet18.mlir  torch_ConvNeXt.ir  torch_MaxVit.ir  torch_VisionTransformer.ir  transpose.mlir  ufront.mlir  vision-transformer-new.mlir  vision-transformer.mlir
test/old/: inception3.mlir  resnet18.mlir  shufflenet-v2.mlir  vision-transformer.mlir
tools/ufront-opt/: CMakeLists.txt
